gts-macros/tests/compile_fail/base_struct_both_id_and_type.stderr
error: struct_to_gts_schema: Base structs cannot have both an ID field (GtsInstanceId) and a GTS Type field (GtsSchemaId) in properties. Found both valid ID and GTS Type fields.
  --> tests/compile_fail/base_struct_both_id_and_type.rs:14:12
   |
14 | pub struct TopicV1BothIdAndTypeV1<P> {
   |            ^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `GtsInstanceId` and `GtsSchemaId`
 --> tests/compile_fail/base_struct_both_id_and_type.rs:4:16
  |
4 | use gts::gts::{GtsInstanceId, GtsSchemaId};
  |                ^^^^^^^^^^^^^  ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
